Revert "fix: use ingressClass for HTTP01 challenge"
This reverts commit ef6bd0fe8f3ea93b4bd59bb64db301e60d167e6c.

--- a/modules/sks/exoscale/values.tmpl.yaml
+++ b/modules/sks/exoscale/values.tmpl.yaml
@@ -17,8 +17,7 @@ cert-manager:
     acme:
       solvers:
         - http01:
-            ingress:
-              class: "traefik-cert-manager"
+            ingress: {}
 
 loki-stack:
   promtail:
